# XposedHook

./: README.md  gradle.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: xposed_init
app/src/main/cpp/: CMakeLists.txt  modmenu_native.cpp  modmenu_native.h  modmenu_native.hpp  wind.cpp  wind.h
app/src/main/cpp/imgui/: imgui.cpp  imgui.h  imgui_draw.cpp
app/src/main/java/com/eleven/xposedhook/: HookUtils.java  MainHook.java  NHook.java  SettingsActivity.java
app/src/main/java/com/eleven/xposedhook/menu/: CreateNativeWindow.java  NativeSuface.java
app/src/main/res/values/: strings.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
